# edd-agent-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: 01-project-story.md  02-agent-evolution.md  03-evaluation-driven-design.md  04-overfitting-evals.md  05-platform-integration.md  06-demo-script.md  07-final-milestone-side-by-side-console.md  08-live-agent-generation.md  09-developer-experience-today.md  10-ideal-developer-experience.md  11-ideal-console-design.md  12-lab-console-design.md  13-functional-application-plan.md  14-react-builder-pivot.md  15-conversational-builder-workflow.md  16-frontend-style-guide.md
scripts/: compare_runs.py  demo_customer_escalation_triage.sh  export_reference_graph_design.sh  generate_variants.py  refresh_overfitting_lab_artifacts.py  run_agent.py  run_evals.py  test_platform_publish.sh
tests/: conftest.py  test_builder_api.py  test_cli_versions_and_compare.py  test_conversation_runner.py  test_customer_escalation_triage.py  test_customer_solution_state.py  test_demo_path.py  test_discovery_invariant_scoring.py  test_edd_client_interface.py  test_eval_loading.py  test_eval_publish_helpers.py  test_eval_runner_generation.py  test_graph_design_artifacts.py  test_http_edd_client.py  test_hybrid_turn_eval.py  test_live_generation.py  test_mcp_client.py  test_overfitting_runner_generation.py  test_overfitting_scoring.py  test_publish_envelope.py  test_publish_envelope_matches_contract.py  test_publish_envelope_v2.py  test_publish_evidence.py  test_publish_trace_links.py  test_reference_publish.py  (+8 more)
(+210 files in other folders)
